# emc_wrapper_rust

./: .gitignore  Cargo.toml
strategy/: Cargo.toml
strategy/src/: main.rs
wrapper/: Cargo.toml  build.rs
wrapper/emc/: CMakeLists.txt  main.cpp  wrapper.cpp  wrapper.h  xmake.lua
wrapper/emc/gmsdk/include/: gmapi.h  gmdef.h  strategy.h
wrapper/emc/gmsdk/lib/win32/: gmsdk.lib
wrapper/emc/gmsdk/lib/win64/: gmsdk.lib
wrapper/src/: error.rs  lib.rs  tests.rs
