[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.73"

[build-dependencies]
bindgen = "0.60.1"
cxx-build = "1.0.73"
miette = { version="4.7.1", features=["fancy"] }